--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -26,7 +26,7 @@
   year = {2025},
   date = {2025-02-05},
   title = {Preserving and combining knowledge in robotic lifelong reinforcement learning},
-  journal = {Nature Machine Intelligence},
+  journal = {<b>Nature Machine Intelligence</b>},
   abstract = {Humans can continually accumulate knowledge and develop increasingly complex behaviours and skills throughout their lives, which is a capability known as ‘lifelong learning’. Although this lifelong learning capability is considered an essential mechanism that makes up general intelligence, recent advancements in artificial intelligence predominantly excel in narrow, specialized domains and generally lack this lifelong learning capability. Here we introduce a robotic lifelong reinforcement learning framework that addresses this gap by developing a knowledge space inspired by the Bayesian non-parametric domain. In addition, we enhance the agent’s semantic understanding of tasks by integrating language embeddings into the framework. Our proposed embodied agent can consistently accumulate knowledge from a continuous stream of one-time feeding tasks. Furthermore, our agent can tackle challenging real-world long-horizon tasks by combining and reapplying its acquired knowledge from the original tasks stream. The proposed framework advances our understanding of the robotic lifelong learning process and may inspire the development of more broadly applicable intelligence.},
   issn = {2522-5839},
   url = {https://doi.org/10.1038/s42256-025-00983-2},
