--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -32,6 +32,8 @@
   url = {https://doi.org/10.1038/s42256-025-00983-2},
   doi = {10.1038/s42256-025-00983-2},
   preview={nmi-legion.png},
+  pdf={https://rdcu.be/d8HLa},
+  html={https://ghiara.github.io/LEGION/},
   selected={true}
 }
 
