--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -34,6 +34,7 @@
   preview={nmi-legion.png},
   pdf={https://rdcu.be/d8HLa},
   html={https://ghiara.github.io/LEGION/},
+  code={https://github.com/Ghiara/LEGION},
   selected={true}
 }
 
