--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -141,7 +141,7 @@
   note = {},
   pdf={https://mediatum.ub.tum.de/doc/1703008/nn74qs5zkpzbmi5zvqcywo4f0.1-s2.0-S2949855423000035-main.pdf},
   code={https://github.com/zhenshan-bing/HDC_Calibration_code},
-  video={https://videoviewsite.wixsite.com/hdc-calibration}
+  video={https://videoviewsite.wixsite.com/hdc-calibration},
 }
 
 
