--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -198,7 +198,7 @@ selected={true}}
 selected={true}}
 
 @ARTICLE{9466373,  author={<b>Bing</b>, <b>Zhenshan</b> and Brucker, Matthias and Morin, Fabrice O. and Li, Rui and Su, Xiaojie and Huang, Kai and Knoll, Alois},  journal={IEEE Transactions on Neural Networks and Learning Systems},   title={Complex Robotic Manipulation via Graph-Based Hindsight Goal Generation},   year={2021},  volume={},  number={},  pages={1-14},  doi={10.1109/TNNLS.2021.3088947}, preview={g-hgg.png},
-selected={true}}
+selected={false}}
 
 @ARTICLE{10.3389/fnbot.2021.688344,
   
