--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -195,7 +195,7 @@ selected={true}}
   abbr={IEEE IV}, author={Zhuang, Genghang and Cagnetta, Carlo and <b>Bing</b>, <b>Zhenshan</b> and Cao, Hu and Li, Xinyi and Huang, Kai and Knoll, Alois},  booktitle={2022 IEEE Intelligent Vehicles Symposium (IV)},   title={A Biologically-Inspired Global Localization System for Mobile Robots Using LiDAR Sensor},   year={2022},  volume={},  number={},  pages={984-990},  doi={10.1109/IV51971.2022.9827283}}
 
 @ARTICLE{9611526,  author={<b>Bing</b>, <b>Zhenshan</b> and Álvarez, Erick and Cheng, Long and Morin, Fabrice O. and Li, Rui and Su, Xiaojie and Huang, Kai and Knoll, Alois},  journal={IEEE Transactions on Neural Networks and Learning Systems},   title={Robotic Manipulation in Dynamic Scenarios via Bounding-Box-Based Hindsight Goal Generation},   year={2021},  volume={},  number={},  pages={1-14},  doi={10.1109/TNNLS.2021.3124366}, preview={bbox.png},
-selected={true}}
+selected={false}}
 
 @ARTICLE{9466373,  author={<b>Bing</b>, <b>Zhenshan</b> and Brucker, Matthias and Morin, Fabrice O. and Li, Rui and Su, Xiaojie and Huang, Kai and Knoll, Alois},  journal={IEEE Transactions on Neural Networks and Learning Systems},   title={Complex Robotic Manipulation via Graph-Based Hindsight Goal Generation},   year={2021},  volume={},  number={},  pages={1-14},  doi={10.1109/TNNLS.2021.3088947}, preview={g-hgg.png},
 selected={false}}
