--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -630,3 +630,40 @@ ABSTRACT={Visual-guided locomotion for snake-like robots is a challenging task, 
   preview={nmi-bit-12.png},
   selected={true}
 }
+
+@article{zhang2025genetic,
+  title={Genetic Informed Trees (GIT*): Path planning via reinforced genetic programming heuristics},
+  author={Zhang, Liding and Cai, Kuanqi and Bing, Zhenshan and Wang, Chaoqun and Knoll, Alois},
+  journal={Biomimetic Intelligence and Robotics},
+  pages={100237},
+  year={2025},
+  publisher={Elsevier}
+}
+
+@article{Yin:25,
+author = {Xiaoting Yin and Hao Shi and Yuhan Bao and Zhenshan Bing and Yiyi Liao and Kailun Yang and Kaiwei Wang},
+journal = {Appl. Opt.},
+keywords = {Camera calibration; Image reconstruction; Image resolution; Imaging systems; Point clouds; Three dimensional reconstruction},
+number = {14},
+pages = {3897--3908},
+publisher = {Optica Publishing Group},
+title = {E-3DGS: 3D Gaussian splatting with exposure and motion events},
+volume = {64},
+month = {May},
+year = {2025},
+url = {https://opg.optica.org/ao/abstract.cfm?URI=ao-64-14-3897},
+doi = {10.1364/AO.557565},
+abstract = {Achieving 3D reconstruction from images captured under optimal conditions has been extensively studied in the vision and imaging fields. However, in real-world scenarios, challenges such as motion blur and insufficient illumination often limit the performance of standard frame-based cameras in delivering high-quality images. To address these limitations, we incorporate a transmittance adjustment device at the hardware level, enabling event cameras to capture both motion and exposure events for diverse 3D reconstruction scenarios. Motion events (triggered by camera or object movement) are collected in fast-motion scenarios when the device is inactive, while exposure events (generated through controlled camera exposure) are captured during slower motion to reconstruct grayscale images for high-quality training and optimization of event-based 3D Gaussian splatting (3DGS). Our framework supports three modes: high-quality reconstruction using exposure events, fast reconstruction relying on motion events, and balanced hybrid optimizing with initial exposure events followed by high-speed motion events. On the EventNeRF dataset, we demonstrate that exposure events significantly improve fine detail reconstruction compared to motion events and outperform frame-based cameras under challenging conditions such as low illumination and overexposure. Furthermore, we introduce EME-3D, a real-world 3D dataset with exposure events, motion events, camera calibration parameters, and sparse point clouds. Our method achieves faster and higher-quality reconstruction than event-based NeRF and is more cost-effective than methods combining event and RGB data. By combining motion and exposure events, E-3DGS sets a new benchmark for event-based 3D reconstruction with robust performance in challenging conditions and lower hardware demands. The source code and dataset are available on GitHub.},
+}
+
+@ARTICLE{10980124,
+  author={Zhang, Yu and Wen, Long and Huang, Yuhong and Sun, Siming and Bing, Zhenshan and He, Wei and Knoll, Alois},
+  journal={IEEE Transactions on Automation Science and Engineering}, 
+  title={Meta-Learning-Based Safety-Critical Control in Multi-Obstacles Environments}, 
+  year={2025},
+  volume={22},
+  number={},
+  pages={15299-15313},
+  keywords={Robots;Safety;Real-time systems;Navigation;Collision avoidance;Trajectory;Automation;Sensors;Shape;Point cloud compression;Meta-learning;signed distance functions;control barrier functions;safety-critical control},
+  doi={10.1109/TASE.2025.3565524}}
+
