--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -633,7 +633,7 @@ ABSTRACT={Visual-guided locomotion for snake-like robots is a challenging task, 
 
 @article{zhang2025genetic,
   title={Genetic Informed Trees (GIT*): Path planning via reinforced genetic programming heuristics},
-  author={Zhang, Liding and Cai, Kuanqi and Bing, Zhenshan and Wang, Chaoqun and Knoll, Alois},
+  author={Zhang, Liding and Cai, Kuanqi and <b>Bing</b><sup>*</sup>, <b>Zhenshan</b> and Wang, Chaoqun and Knoll, Alois},
   journal={Biomimetic Intelligence and Robotics},
   pages={100237},
   year={2025},
@@ -657,7 +657,7 @@ abstract = {Achieving 3D reconstruction from images captured under optimal condi
 }
 
 @ARTICLE{10980124,
-  author={Zhang, Yu and Wen, Long and Huang, Yuhong and Sun, Siming and Bing, Zhenshan and He, Wei and Knoll, Alois},
+  author={Zhang, Yu and Wen, Long and Huang, Yuhong and Sun, Siming and <b>Bing</b><sup>*</sup>, <b>Zhenshan</b> and He, Wei and Knoll, Alois},
   journal={IEEE Transactions on Automation Science and Engineering}, 
   title={Meta-Learning-Based Safety-Critical Control in Multi-Obstacles Environments}, 
   year={2025},
@@ -666,4 +666,15 @@ abstract = {Achieving 3D reconstruction from images captured under optimal condi
   pages={15299-15313},
   keywords={Robots;Safety;Real-time systems;Navigation;Collision avoidance;Trajectory;Automation;Sensors;Shape;Point cloud compression;Meta-learning;signed distance functions;control barrier functions;safety-critical control},
   doi={10.1109/TASE.2025.3565524}}
+
+  @ARTICLE{10970041,
+  author={Zhang, Liding and Ling, Yao and <b>Bing</b><sup>*</sup>, <b>Zhenshan</b> and Wu, Fan and Haddadin, Sami and Knoll, Alois},
+  journal={IEEE Robotics and Automation Letters}, 
+  title={Tree-Based Grafting Approach for Bidirectional Motion Planning With Local Subsets Optimization}, 
+  year={2025},
+  volume={10},
+  number={6},
+  pages={5815-5822},
+  keywords={Planning;Costs;Convergence;Optimization;Robots;Path planning;Collision avoidance;Training;Probabilistic logic;Fans;Bidirectional-tree grafting;greedy local subsets;optimal motion planning;sampling-based path planning},
+  doi={10.1109/LRA.2025.3562369}}
 
