--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -678,3 +678,29 @@ abstract = {Achieving 3D reconstruction from images captured under optimal condi
   keywords={Planning;Costs;Convergence;Optimization;Robots;Path planning;Collision avoidance;Training;Probabilistic logic;Fans;Bidirectional-tree grafting;greedy local subsets;optimal motion planning;sampling-based path planning},
   doi={10.1109/LRA.2025.3562369}}
 
+@ARTICLE{10934975,
+  author={Yao, Xiangtong and Blei, Tobias and Meng, Yuan and Zhang, Yu and Zhou, Hongkuan and <b>Bing</b><sup>*</sup>, <b>Zhenshan</b> and Huang, Kai and Sun, Fuchun and Knoll, Alois},
+  journal={IEEE/ASME Transactions on Mechatronics}, 
+  title={Long-Horizon Language-Conditioned Imitation Learning for Robotic Manipulation}, 
+  year={2025},
+  volume={},
+  number={},
+  pages={1-12},
+  keywords={Robots;Imitation learning;Transformers;Training;Cloning;Behavioral sciences;Visualization;Mechatronics;Sun;Robustness;Imitation learning;language-controlled robotics;long-horizon task learning},
+  doi={10.1109/TMECH.2025.3547047}}
+
+
+@article{ZHANG2025100207,
+title = {Motion planning for robotics: A review for sampling-based planners},
+journal = {Biomimetic Intelligence and Robotics},
+volume = {5},
+number = {1},
+pages = {100207},
+year = {2025},
+issn = {2667-3797},
+doi = {https://doi.org/10.1016/j.birob.2024.100207},
+url = {https://www.sciencedirect.com/science/article/pii/S2667379724000652},
+author = {Liding Zhang and Kuanqi Cai and Zewei Sun and <b>Bing</b><sup>*</sup>, <b>Zhenshan</b> and Chaoqun Wang and Luis Figueredo and Sami Haddadin and Alois Knoll},
+keywords = {Robotics, Motion planning, Sampling-based algorithms},
+abstract = {Recent advancements in robotics have transformed industries such as manufacturing, logistics, surgery, and planetary exploration. A key challenge is developing efficient motion planning algorithms that allow robots to navigate complex environments while avoiding collisions and optimizing metrics like path length, sweep area, execution time, and energy consumption. Among the available algorithms, sampling-based methods have gained the most traction in both research and industry due to their ability to handle complex environments, explore free space, and offer probabilistic completeness along with other formal guarantees. Despite their widespread application, significant challenges still remain. To advance future planning algorithms, it is essential to review the current state-of-the-art solutions and their limitations. In this context, this work aims to shed light on these challenges and assess the development and applicability of sampling-based methods. Furthermore, we aim to provide an in-depth analysis of the design and evaluation of ten of the most popular planners across various scenarios. Our findings highlight the strides made in sampling-based methods while underscoring persistent challenges. This work offers an overview of the important ongoing research in robotic motion planning.}
+}
