--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -704,3 +704,19 @@ author = {Liding Zhang and Kuanqi Cai and Zewei Sun and <b>Bing</b><sup>*</sup>,
 keywords = {Robotics, Motion planning, Sampling-based algorithms},
 abstract = {Recent advancements in robotics have transformed industries such as manufacturing, logistics, surgery, and planetary exploration. A key challenge is developing efficient motion planning algorithms that allow robots to navigate complex environments while avoiding collisions and optimizing metrics like path length, sweep area, execution time, and energy consumption. Among the available algorithms, sampling-based methods have gained the most traction in both research and industry due to their ability to handle complex environments, explore free space, and offer probabilistic completeness along with other formal guarantees. Despite their widespread application, significant challenges still remain. To advance future planning algorithms, it is essential to review the current state-of-the-art solutions and their limitations. In this context, this work aims to shed light on these challenges and assess the development and applicability of sampling-based methods. Furthermore, we aim to provide an in-depth analysis of the design and evaluation of ten of the most popular planners across various scenarios. Our findings highlight the strides made in sampling-based methods while underscoring persistent challenges. This work offers an overview of the important ongoing research in robotic motion planning.}
 }
+
+@article{https://doi.org/10.1002/rnc.7652,
+author = {Wang, Chunlian and Ma, Tiedong and Bing, Zhenshan and Knoll, Alois and Su, Xiaojie},
+title = {Dynamic event-triggered sliding mode control of networked switched systems with imperfect transmissions},
+journal = {International Journal of Robust and Nonlinear Control},
+volume = {35},
+number = {1},
+pages = {395-416},
+keywords = {dynamic event-triggered scheme, networked switched systems, sliding mode control},
+doi = {https://doi.org/10.1002/rnc.7652},
+url = {https://onlinelibrary.wiley.com/doi/abs/10.1002/rnc.7652},
+eprint = {https://onlinelibrary.wiley.com/doi/pdf/10.1002/rnc.7652},
+abstract = {Abstract As a significant type of dynamic systems, switched systems have been successfully applied to the construction of many engineering fields. Recently, the studies of networked switched control systems have received a lot of attention. However, the intervention of the network often causes the delay or packet loss during data transmission, resulting in incomplete data transmission. The paper studies a sliding mode observer design for above-mentioned systems with external disturbance under an imperfect transmission communication link. By constructing a dynamic event generator, a dynamic event-triggered mechanism between the event-generator and controller is developed to save additional network bandwidth and improve system performance. A desirable sliding surface function is built to solve the complexity of system analysis problems caused by network-induced delay and packet-dropout-induced imperfect transmission. Then, a corresponding event-based integral-type sliding mode observer is constructed to estimate inaccessible system states, guaranteeing the reachability of the sliding surface. Based on the augmented system dynamics, sufficient conditions are derived to guarantee exponent stability with a weighted \$\$ {\mathcal{L}}\_2 \$\$-\$\$ {\mathcal{L}}\_{\infty } \$\$ performance level. Finally, two simulations are presented to demonstrate the feasibility and effectiveness of the proposed method.},
+year = {2025}
+}
+
