--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -720,3 +720,14 @@ abstract = {Abstract As a significant type of dynamic systems, switched systems 
 year = {2025}
 }
 
+@ARTICLE{10819445,
+  author={Li, Yuchen and Li, Luxi and Teng, Siyu and Bing, Zhenshan and Christian Knoll, Alois and Xuanyuan, Zhe and Chen, Long},
+  journal={IEEE Transactions on Field Robotics}, 
+  title={Online Triangular Constraint Calibration for LiDAR and Cameras in Open-Pit Mines}, 
+  year={2025},
+  volume={2},
+  number={},
+  pages={131-146},
+  keywords={Calibration;Image segmentation;Cameras;Sensors;Point cloud compression;Laser radar;Translation;Image edge detection;Accuracy;Mining industry;LiDAR-camera online calibration;mining trucks;open-pit mines;semantic segmentation},
+  doi={10.1109/TFR.2024.3524940}}
+
