--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -731,3 +731,30 @@ year = {2025}
   keywords={Calibration;Image segmentation;Cameras;Sensors;Point cloud compression;Laser radar;Translation;Image edge detection;Accuracy;Mining industry;LiDAR-camera online calibration;mining trucks;open-pit mines;semantic segmentation},
   doi={10.1109/TFR.2024.3524940}}
 
+@ARTICLE{10768983,
+  author={Zheng, Zhi and Jiang, Tao and Wang, Jianxiang and Su, Xiaojie and Huang, Jiangshuai and Bing, Zhenshan and Knoll, Alois},
+  journal={IEEE Transactions on Automation Science and Engineering}, 
+  title={Adaptive Oscillation-Suppression Control for Distributed Nonholonomic Vehicle Safe Formation With Nested Input Saturation}, 
+  year={2025},
+  volume={22},
+  number={},
+  pages={9140-9152},
+  keywords={Safety;Collision avoidance;Collaboration;Oscillators;Kinematics;Angular velocity;Compounds;Automation;Trajectory;Security;Nonholonomic vehicles;nested input saturation;composite safety guarantee;compound adaptive anti-windup;distributed collaboration},
+  doi={10.1109/TASE.2024.3500076}}
+
+  @article{https://doi.org/10.1002/rob.22469,
+author = {Li, Yuchen and Teng, Siyu and Wang, Junhui and Ai, Yunfeng and Tian, Bin and Xuanyuan, Zhe and Bing, Zhenshan and Knoll, Alois C. and Wang, Fei-Yue and Chen, Long},
+title = {AutoMine: A Multimodal Dataset for Robot Navigation in Open-Pit Mines},
+journal = {Journal of Field Robotics},
+volume = {42},
+number = {4},
+pages = {1523-1536},
+doi = {https://doi.org/10.1002/rob.22469},
+url = {https://onlinelibrary.wiley.com/doi/abs/10.1002/rob.22469},
+eprint = {https://onlinelibrary.wiley.com/doi/pdf/10.1002/rob.22469},
+abstract = {ABSTRACT In the past decade, autonomous driving has witnessed significant advancements, largely attributable to the evolution of precise algorithms and efficient computing platforms. Nevertheless, the open-pit mine, a typical scenario within closed-field environments, has garnered limited attention in autonomous driving, primarily owing to the scarcity of data and experimental benchmarks. This work presents original data collected from five platforms, comprising one passenger vehicle, three wide-body trucks, and one mining truck, across eight different mining sites. We provide a comprehensive elucidation of platform types, sensors, calibration methodologies, synchronization techniques, data collection approaches, and a thorough analysis of the data characteristics. In addition, we offer a detailed benchmark comparison of short and long odometry and navigation performance across multiple vehicles in open-pit mines. With comprehensive data characteristics, experimental performance evaluations, and thorough analysis, we believe that this work establishes a robust research foundation for navigation and fusion methods in open-pit mines, thereby constituting a significant contribution to the autonomous driving and field robotics communities.},
+year = {2025}
+}
+
+
+
