--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -732,6 +732,7 @@ year = {2025}
   doi={10.1109/TFR.2024.3524940}}
 
 @ARTICLE{10768983,
+  abbr={T-ASE},
   author={Zheng, Zhi and Jiang, Tao and Wang, Jianxiang and Su, Xiaojie and Huang, Jiangshuai and Bing, Zhenshan and Knoll, Alois},
   journal={IEEE Transactions on Automation Science and Engineering}, 
   title={Adaptive Oscillation-Suppression Control for Distributed Nonholonomic Vehicle Safe Formation With Nested Input Saturation}, 
