--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -757,6 +757,17 @@ abstract = {ABSTRACT In the past decade, autonomous driving has witnessed signif
 year = {2025}
 }
 
+@INPROCEEDINGS{10802295,
+  abbr={IROS}
+  author={Zhao, Jingyun and Vogel-Heuser, Birgit and Ao, Jicong and Wu, Yansong and Zhang, Liding and Hartl, Fandi and Hujo, Dominik and Bing, Zhenshan and Wu, Fan and Knoll, Alois and Haddadin, Sami and Vojanec, Bernd and Markert, Timo and Kraft, André},
+  booktitle={2024 IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS)}, 
+  title={Ontology Based AI Planning and Scheduling for Robotic Assembly}, 
+  year={2024},
+  volume={},
+  number={},
+  pages={9855-9862},
+  keywords={Robotic assembly;Job shop scheduling;Production planning;Production;Ontologies;Dynamic scheduling;Throughput;Planning;Assembly;Smart manufacturing},
+  doi={10.1109/IROS58592.2024.10802295}}
 
 
 
