--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -668,6 +668,7 @@ abstract = {Achieving 3D reconstruction from images captured under optimal condi
   doi={10.1109/TASE.2025.3565524}}
 
   @ARTICLE{10970041,
+  abbr={IEEE RAL}
   author={Zhang, Liding and Ling, Yao and <b>Bing</b><sup>*</sup>, <b>Zhenshan</b> and Wu, Fan and Haddadin, Sami and Knoll, Alois},
   journal={IEEE Robotics and Automation Letters}, 
   title={Tree-Based Grafting Approach for Bidirectional Motion Planning With Local Subsets Optimization}, 
@@ -744,6 +745,7 @@ year = {2025}
   doi={10.1109/TASE.2024.3500076}}
 
   @article{https://doi.org/10.1002/rob.22469,
+  abbr={JFR},
 author = {Li, Yuchen and Teng, Siyu and Wang, Junhui and Ai, Yunfeng and Tian, Bin and Xuanyuan, Zhe and Bing, Zhenshan and Knoll, Alois C. and Wang, Fei-Yue and Chen, Long},
 title = {AutoMine: A Multimodal Dataset for Robot Navigation in Open-Pit Mines},
 journal = {Journal of Field Robotics},
@@ -758,7 +760,7 @@ year = {2025}
 }
 
 @INPROCEEDINGS{10802295,
-  abbr={IROS}
+  abbr={IROS},
   author={Zhao, Jingyun and Vogel-Heuser, Birgit and Ao, Jicong and Wu, Yansong and Zhang, Liding and Hartl, Fandi and Hujo, Dominik and Bing, Zhenshan and Wu, Fan and Knoll, Alois and Haddadin, Sami and Vojanec, Bernd and Markert, Timo and Kraft, André},
   booktitle={2024 IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS)}, 
   title={Ontology Based AI Planning and Scheduling for Robotic Assembly}, 
@@ -770,5 +772,16 @@ year = {2025}
   doi={10.1109/IROS58592.2024.10802295}}
 
 
+@INPROCEEDINGS{10802377,
+abbr={IROS},
+  author={Pei, Guanran and Stella, Francesco and Meebed, Omar and Bing, Zhenshan and Santina, Cosimo Della and Hughes, Josie},
+  booktitle={2024 IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS)}, 
+  title={IMU Based Pose Reconstruction and Closed-loop Control for Soft Robotic Arms}, 
+  year={2024},
+  volume={},
+  number={},
+  pages={1847-1852},
+  keywords={Measurement units;Perturbation methods;Inertial navigation;Soft robotics;Reconstruction algorithms;Robot sensing systems;Robustness;Sensors;Manipulator dynamics;Intelligent robots},
+  doi={10.1109/IROS58592.2024.10802377}}
 
 
