--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -785,3 +785,15 @@ abbr={IROS},
   doi={10.1109/IROS58592.2024.10802377}}
 
 
+@INPROCEEDINGS{10802466,
+abbr={IROS},
+  author={Zhang, Liding and <b>Bing</b><sup>*</sup>, <b>Zhenshan</b> and Chen, Kejia and Chen, Lingyun and Cai, Kuanqi and Zhang, Yu and Wu, Fan and Krumbholz, Peter and Yuan, Zhilin and Haddadin, Sami and Knoll, Alois},
+  booktitle={2024 IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS)}, 
+  title={Flexible Informed Trees (FIT*): Adaptive Batch-Size Approach in Informed Sampling-Based Path Planning}, 
+  year={2024},
+  volume={},
+  number={},
+  pages={3146-3152},
+  keywords={Learning systems;Costs;Benchmark testing;Path planning;Resource management;Collision avoidance;Optimization;Intelligent robots;Convergence},
+  doi={10.1109/IROS58592.2024.10802466}}
+
