--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -668,7 +668,7 @@ abstract = {Achieving 3D reconstruction from images captured under optimal condi
   doi={10.1109/TASE.2025.3565524}}
 
   @ARTICLE{10970041,
-  abbr={IEEE RAL}
+  abbr={IEEE RAL},
   author={Zhang, Liding and Ling, Yao and <b>Bing</b><sup>*</sup>, <b>Zhenshan</b> and Wu, Fan and Haddadin, Sami and Knoll, Alois},
   journal={IEEE Robotics and Automation Letters}, 
   title={Tree-Based Grafting Approach for Bidirectional Motion Planning With Local Subsets Optimization}, 
@@ -680,6 +680,7 @@ abstract = {Achieving 3D reconstruction from images captured under optimal condi
   doi={10.1109/LRA.2025.3562369}}
 
 @ARTICLE{10934975,
+abbr={IEEE TMech},
   author={Yao, Xiangtong and Blei, Tobias and Meng, Yuan and Zhang, Yu and Zhou, Hongkuan and <b>Bing</b><sup>*</sup>, <b>Zhenshan</b> and Huang, Kai and Sun, Fuchun and Knoll, Alois},
   journal={IEEE/ASME Transactions on Mechatronics}, 
   title={Long-Horizon Language-Conditioned Imitation Learning for Robotic Manipulation}, 
