--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -798,3 +798,28 @@ abbr={IROS},
   keywords={Learning systems;Costs;Benchmark testing;Path planning;Resource management;Collision avoidance;Optimization;Intelligent robots;Convergence},
   doi={10.1109/IROS58592.2024.10802466}}
 
+
+@INPROCEEDINGS{10802280,
+  abbr={IROS},
+  author={Zhang, Liding and <b>Bing</b><sup>*</sup>, <b>Zhenshan</b> and Zhang, Yu and Cai, Kuanqi and Chen, Lingyun and Wu, Fan and Haddadin, Sami and Knoll, Alois},
+  booktitle={2024 IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS)}, 
+  title={Elliptical K-Nearest Neighbors - Path Optimization via Coulomb’s Law and Invalid Vertices in C-space Obstacles}, 
+  year={2024},
+  volume={},
+  number={},
+  pages={12032-12039},
+  keywords={Costs;Navigation;Force;Nearest neighbor methods;Search problems;Path planning;Planning;Optimization;Intelligent robots;Convergence},
+  doi={10.1109/IROS58592.2024.10802280}}
+
+  @INPROCEEDINGS{10802727,
+  abbr={IROS},
+  author={Zhang, Yu and Tian, Guangyao and Wen, Long and Yao, Xiangtong and Zhang, Liding and <b>Bing</b><sup>*</sup>, <b>Zhenshan</b> and He, Wei and Knoll, Alois},
+  booktitle={2024 IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS)}, 
+  title={Online Efficient Safety-Critical Control for Mobile Robots in Unknown Dynamic Multi-Obstacle Environments}, 
+  year={2024},
+  volume={},
+  number={},
+  pages={12370-12377},
+  keywords={Point cloud compression;Navigation;Heuristic algorithms;Clustering algorithms;Streaming media;Prediction algorithms;Real-time systems;Safety;Mobile robots;Kalman filters},
+  doi={10.1109/IROS58592.2024.10802727}}
+
